Fixed food progress bar scrolling cutoff and made design edits to Medicine page

--- a/food.css
+++ b/food.css
@@ -42,12 +42,11 @@ body {
     color: #000000;
     width: 100%;
     max-width: 640px;
-    height: 100vh;
+    min-height: 100vh; /* Change from height to min-height */
     margin: 0 auto;
     padding: 0;
     display: flex;
     flex-direction: column;
-    overflow-y: auto;
 }
 
 h1 {
@@ -75,6 +74,7 @@ h2.history-title {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     flex-grow: 1;
     display: flex;
+    overflow-y: auto;
     flex-direction: column;
 }
 
@@ -230,6 +230,7 @@ progress {
     margin-top: 10px;
     background-color: #00455C;
     border: 1px solid black;
+    display: block;
 }
 
 
